--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
 	  { "path": "./packages/auth" },
 	  { "path": "./packages/services" },
 	  { "path": "./packages/types" },
-	  { "path": "./packages/utils" }
+	  { "path": "./packages/utils" },
+	  { "path": "./packages/theme" }
 	]
 }
