--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -3,7 +3,7 @@
 	"compilerOptions": {
 		"composite": true,
 		"declaration": true,
-		"outDir": "./build",
+		"outDir": "build",
 		"rootDir": "src"
 	},
 	"include": ["src"],
