implemented theme colors across components.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
 		"@babel/preset-typescript": "^7.27.0",
 		"@parcel/resolver-default": "^2.14.4",
 		"@types/dotenv-webpack": "^7.0.8",
+		"@types/react-native-vector-icons": "^6.4.18",
 		"babel-loader": "^10.0.0",
 		"babel-plugin-module-resolver": "^5.0.2",
 		"babel-plugin-react-native-web": "^0.20.0",
@@ -49,10 +50,10 @@
 		"@babel/runtime": "^7.27.0",
 		"@expo/vector-icons": "^14.1.0",
 		"@gorhom/bottom-sheet": "^5.1.2",
+		"@iam/theme": "workspace:*",
 		"@iam/types": "workspace:*",
 		"@services": "workspace:*",
 		"@utils": "workspace:*",
-		"@iam/theme": "workspace:*",
 		"axios": "^0.27.2",
 		"date-fns": "^4.1.0",
 		"exif-js": "^2.3.0",
