--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@auth",
+    "name": "@iam/auth",
     "version": "1.0.0",
     "type": "commonjs",
     "main": "build/index.js",
@@ -21,7 +21,7 @@
         "bcryptjs": "^3.0.2",
         "jsonwebtoken": "^9.0.2",
         "@iam/types": "workspace:*",
-        "@utils": "workspace:*"
+        "@iam/utils": "workspace:*"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
