--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,32 +18,32 @@
         "paths": {
             "react-native": ["node_modules/react-native-web"],
     
-            "@auth": ["packages/auth/src/index.ts"],
-            "@auth/*": ["packages/auth/src/*"],
+            "@iam/auth": ["packages/auth/src/index.ts"],
+            "@iam/auth/*": ["packages/auth/src/*"],
     
-            "@services": ["packages/services/src/index.ts"],
-            "@services/*": ["packages/services/src/*"],
+            "@iam/services": ["packages/services/src/index.ts"],
+            "@iam/services/*": ["packages/services/src/*"],
     
             "@iam/types": ["packages/types/src/index.ts"],
             "@iam/types/*": ["packages/types/src/*"],
     
-            "@utils": ["packages/utils/src/index.ts"],
-            "@utils/*": ["packages/utils/src/*"],
+            "@iam/utils": ["packages/utils/src/index.ts"],
+            "@iam/utils/*": ["packages/utils/src/*"],
     
             "@iam/theme": ["packages/theme/src/index.ts"],
             "@iam/theme/*": ["packages/theme/src/*"],
     
-            "@auth/build": ["packages/auth/build/index.js"],
-            "@auth/build/*": ["packages/auth/build/*"],
+            "@iam/auth/build": ["packages/auth/build/index.js"],
+            "@iam/auth/build/*": ["packages/auth/build/*"],
     
-            "@services/build": ["packages/services/build/index.js"],
-            "@services/build/*": ["packages/services/build/*"],
+            "@iam/services/build": ["packages/services/build/index.js"],
+            "@iam/services/build/*": ["packages/services/build/*"],
     
             "@iam/types/build": ["packages/types/build/index.js"],
             "@iam/types/build/*": ["packages/types/build/*"],
     
-            "@utils/build": ["packages/utils/build/index.js"],
-            "@utils/build/*": ["packages/utils/build/*"],
+            "@iam/utils/build": ["packages/utils/build/index.js"],
+            "@iam/utils/build/*": ["packages/utils/build/*"],
     
             "@iam/theme/build": ["packages/theme/build/index.js"],
             "@iam/theme/build/*": ["packages/theme/build/*"]
