--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -52,8 +52,8 @@
 		"@gorhom/bottom-sheet": "^5.1.2",
 		"@iam/theme": "workspace:*",
 		"@iam/types": "workspace:*",
-		"@services": "workspace:*",
-		"@utils": "workspace:*",
+		"@iam/services": "workspace:*",
+		"@iam/utils": "workspace:*",
 		"axios": "^0.27.2",
 		"date-fns": "^4.1.0",
 		"exif-js": "^2.3.0",
