--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@utils",
+    "name": "@iam/utils",
     "version": "1.0.0",
     "type": "commonjs",
     "main": "build/index.js",
