--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -47,12 +47,13 @@
 		"webpack-dev-server": "^5.2.1"
 	},
 	"dependencies": {
+		"@babel/plugin-proposal-export-namespace-from": "^7.18.9",
 		"@babel/runtime": "^7.27.0",
 		"@expo/vector-icons": "^14.1.0",
 		"@gorhom/bottom-sheet": "^5.1.2",
+		"@iam/services": "workspace:*",
 		"@iam/theme": "workspace:*",
 		"@iam/types": "workspace:*",
-		"@iam/services": "workspace:*",
 		"@iam/utils": "workspace:*",
 		"axios": "^0.27.2",
 		"date-fns": "^4.1.0",
@@ -74,6 +75,7 @@
 		"react-native-screens": "^4.10.0",
 		"react-native-vector-icons": "^10.2.0",
 		"react-native-webview": "^13.15.0",
+		"react-native-worklets": "^0.4.1",
 		"react-webcam": "^7.2.0",
 		"socket.io-client": "^4.8.1",
 		"url": "^0.11.4"
