--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -73,6 +73,7 @@
 		"react-native-reanimated": "^3.19.1",
 		"react-native-safe-area-context": "^5.4.0",
 		"react-native-screens": "^4.10.0",
+		"react-native-select-dropdown": "^4.0.1",
 		"react-native-vector-icons": "^10.2.0",
 		"react-native-webview": "^13.15.0",
 		"react-native-worklets": "^0.4.1",
